[project]
name = "ComfyUI-Step1X-Edit"
description = "ComfyUI Custom Node for Step1X-Edit."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch>=2.3.1","liger_kernel==0.5.4","einops==0.8.1","transformers==4.49.0","qwen_vl_utils==0.0.10","safetensors==0.4.5","pillow==11.1.0"]

[project.urls]
Repository = "https://github.com/quank123wip/ComfyUI-Step1X-Edit"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "quank123wip"
DisplayName = "ComfyUI-Step1X-Edit"